syntax = "proto3";

option csharp_namespace = "AspNetGrpc.Services";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// damit der Import funktioniert muss in der csproj der Rootfolder gesetzt werden.
import "enums.proto";

service SensorReadingService{
  rpc AddReading(SensorReadingPackage) returns (SensorResponseMessage);
  rpc GetUpdates(google.protobuf.Empty) returns (stream SensorReadingMessage);
}

message SensorReadingPackage{
  repeated SensorReadingMessage readings = 1;
}

message SensorReadingMessage{
  int32 sensorId = 1;
  int32 temperatureInC = 2;
  int32 humidity = 3;
  int32 atmosphericPressure= 4;
  SensorStatus sensorStatus = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message SensorResponseMessage{
  bool success = 1;
  string message = 2;
}